tests/ui/failing/slice-const-param.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.00s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/const-generics/slice-const-param.rs`
error[E0741]: `&'static str` can't be used as a const parameter type
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/const-generics/slice-const-param.rs:6:40
  |
6 | pub fn function_with_str<const STRING: &'static str>() -> &'static str {
  |                                        ^^^^^^^^^^^^

error[E0741]: `&'static [u8]` can't be used as a const parameter type
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/const-generics/slice-const-param.rs:10:41
   |
10 | pub fn function_with_bytes<const BYTES: &'static [u8]>() -> &'static [u8] {
   |                                         ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0741`.
